<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/layout_padding"
    android:paddingRight="@dimen/layout_padding"
    tools:context="org.caojun.ttclass.activity.ClassDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="0">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/tilName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/teacher_name">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/etName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/btnName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/modify" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_span="2"
                        android:hint="@string/mobile">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/etMobile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="phone"
                            android:maxLength="11"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Switch
                        android:id="@+id/swHasWeChat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="2"
                        android:text="@string/no_wechat" />
                </TableRow>

            </TableLayout>
        </LinearLayout>
    </ScrollView>

    <include
        layout="@layout/layout_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <org.caojun.widget.MobileKeyboard
        android:id="@+id/mobileKeyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
